--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="./fonts/a-fonts.css">
     <link rel="stylesheet" href="./fontawesome-pro-5.7.2/fontawesome-pro-5.8.1-web/css/all.css">
 
-    <link rel="stylesheet" href="./css/sgh-index.css">
-    <link rel="stylesheet" href="./sass/style.css">
+    <link rel="stylesheet" href="./css/index.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js"></script>
 
